@@ -14,6 +14,8 @@
 	<sonar.surefire.reportsPath>/target/surefire-reports</sonar.surefire.reportsPath>
 	<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>    <!-- This is the default, put here to be explicit -->
 	<sonar.jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
+	<argLine>-Xms256m -Xmx1524m -XX:MaxPermSize=256m -Duser.language=en</argLine>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -79,12 +81,9 @@
             <goals>
                 <goal>prepare-agent</goal>
             </goals>
-            <configuration>
                 <configuration>
       				<destFile>${project.basedir}/../target/jacoco-it.exec</destFile>
 				</configuration>
-                <propertyName>failsafe.argLine</propertyName>
-            </configuration>
         </execution>
         <execution>
             <id>post-integration-test</id>
@@ -104,25 +103,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.15</version>
-				<configuration>
-					<!-- Sets the VM argument line used when unit tests are run. -->
-					<argLine>${surefireArgLine}</argLine>
-					<!-- Skips unit tests if the value of skip.unit.tests property is true -->
-					<skipTests>${skip.unit.tests}</skipTests>
-					<!-- Excludes integration tests when unit tests are run. -->
-					<excludes>
-						<exclude>**/IT*.java</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 			<!-- Used for integration tests -->
 			<plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-failsafe-plugin</artifactId>
     <version>2.14</version>
-    <configuration>
-        <argLine>${failsafe.argLine}</argLine>
-    </configuration>
     <executions>
         <execution>
             <id>integration-test</id>
